apps/tekton-pipelines/dashboard-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: tekton-pipelines
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.34.0
    dashboard.tekton.dev/release: v0.34.0
    version: v0.34.0
spec:
  to:
    kind: Service
    name: tekton-dashboard
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
